# DLockersServer

./: .gitmodules  CMakeLists.txt  README.md  server_main.cpp
.github/workflows/: build-test-install.yml
include/: bserver.hpp
qml/: Enter_Pin_server.qml  Head.qml  LocalConf.qml  Main_view_server.qml  window.qml
src/: bserver.cpp
wasm/: index.html  server_main.js  server_main.worker.js  style.css
wasm/js/: initQTwasm.js  scripts.js
wasm/wasm/: index.html
